# csc376

./: .gitignore  README.md  test_franky.py  test_visualization_then_execute.py
csc376_franky/: CMakeLists.txt  setup.py
csc376_franky/csc376_franky/: motion_generator.py  robot_wrapper.py  vizualizer.py
csc376_franky/include/csc376_franky/: franka_joint_trajectory_controller.hpp  gripper.hpp
csc376_franky/python/: bind_franka_joint_trajectory_controller.cpp  bind_franky.cpp  macros.hpp
csc376_franky/src/: franka_joint_trajectory_controller.cpp  gripper.cpp
csc376_franky/test/: read_gripper_state.py  read_robot_state.py  sim_or_real_trajectory.py  sim_or_real_trajectory_with_wrapper.py  sim_then_real_trajectory.py  simulation.py  test.py  test_control.py  test_visualization_then_execute.py  visualize_and_move_gripper.py  visualize_then_execute.py  visualize_then_execute_trajectory.py
not_used_franky/: README.md  test_franky.py  test_visualization_then_execute.py
